syntax = "proto3";

message EditEmailRequest {
  string email = 1;
}