syntax = "proto3";

message GetUsersRequest {
  repeated int64 userId = 1;
}